Side Bar & Chat Bar Added

--- a/whatsapp-mern/src/Chat.css
+++ b/whatsapp-mern/src/Chat.css
@@ -1,5 +1,57 @@
 .chat {
     display: flex;
     flex-direction: column;
-    flex: 0.65;
+    flex: 0.7;
+}
+
+.chat__header {
+    padding: 16px;
+    display: flex;
+    align-items: center;
+    border-bottom: 2px solid lightgrey;
+}
+
+.chat__headerInfo {
+    flex: 1;
+    padding-left: 20px;
+}
+
+.chat__headerInfo>h4 {
+    margin-bottom: 3px;
+    font-weight: 500;
+}
+
+.chat__headerInfo>p {
+    color: gray;
+}
+
+.chat__body {
+    flex: 1;
+    background-image: url("https://w0.peakpx.com/wallpaper/818/148/HD-wallpaper-whatsapp-background-cool-dark-green-new-theme-whatsapp.jpg");
+    padding: 30px;
+    background-repeat: repeat;
+    background-position: center;
+    overflow: scroll;
+}
+
+.chat__message {
+    position: relative;
+    font-size: 16px;
+    padding: 5px;
+    width: fit-content;
+    border-radius: 10px;
+    background-color: #ffffff;
+    margin-bottom: 20px;
+}
+
+.chat__timestamp {
+    margin-left: 10px;
+    font-size: xx-small;
+}
+
+.chat__name {
+    position: absolute;
+    top: -13px;
+    font-weight: 800;
+    font-size: xx-small;
 }
