--- a/whatsapp-mern/src/Chat.css
+++ b/whatsapp-mern/src/Chat.css
@@ -5,7 +5,7 @@
 }
 
 .chat__header {
-    padding: 16px;
+    padding: 8px;
     display: flex;
     align-items: center;
     border-bottom: 2px solid lightgrey;
@@ -31,7 +31,8 @@
     padding: 30px;
     background-repeat: repeat;
     background-position: center;
-    overflow: scroll;
+    overflow-y: scroll;
+    overflow-x: hidden;
 }
 
 .chat__message {
@@ -54,4 +55,39 @@
     top: -13px;
     font-weight: 800;
     font-size: xx-small;
+}
+
+.chat__receiver {
+    margin-left: auto;
+    background-color: lightgreen;
+}
+
+.chat__footer {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 40px;
+    border-top: 1px solid lightgray;
+}
+
+.chat__footer>form {
+    flex: 1;
+    display: flex;
+}
+
+.chat__footer>form>input {
+    flex: 1;
+    border-radius: 30px;
+    padding: 6px;
+    border: none;
+    outline-width: 0;
+}
+
+.chat__footer>form>button {
+    display: none;
+}
+
+.chat__footer>.MuiSvgIcon-root {
+    padding: 8px;
+    color: gray;
 }
