--- a/whatsapp-mern/src/Chat.css
+++ b/whatsapp-mern/src/Chat.css
@@ -53,8 +53,9 @@
 .chat__name {
     position: absolute;
     top: -13px;
-    font-weight: 800;
-    font-size: xx-small;
+    font-weight: 700;
+    font-size: x-small;
+    white-space: nowrap;
 }
 
 .chat__receiver {
